--- a/website/templates/info.html
+++ b/website/templates/info.html
@@ -32,7 +32,7 @@
           
           
           <a class="nav-item nav-link" id="notes" href="/notes">notes</a>
-          <a class="nav-item nav-link" id="Board" href="/Board">Board</a>
+          <a class="nav-item nav-link" id="info" href="/info">info</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           
@@ -83,3 +83,37 @@
     ></script>
   </body>
 </html>
+<div class="about-section">
+    <h1 style="text-align:center">קצת על האתר</h1>
+    <p style="text-align:center">האתר תביעות ייצוגיות הינו אתר המשמש פלטפורמה לעורכי דין ולקוחותם</p>
+    <p style="text-align:center">ליצור קשר משפטי ולאגד תביעות ייצוגיות מול גופים גדולים</p>
+  </div>
+  
+  <h2 style="text-align:center">תביעות ייצוגיות</h2>
+  
+    <div class="column">
+      <div class="card">
+        <img src="/instance/linoy.jpg" alt="lin" style="width:50%">
+        <div class="container">
+          <h2>לין דהן</h2>
+          <p class="title">t,rho מפתחת</p>
+          <p>מפתחת תוכן ואתרים אינטרנטים </p>
+          <p>lindahan164@gmail.com</p>
+          
+        </div>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <img src="\img\linoy.jpg" alt="linoy" style="width:100%">
+        <div class="container">
+          <h2>לינוי הראש</h2>
+          <p class="title">מפתחת אתרים</p>
+          <p>אחראית עיצוב ופיתוח אתרים אינטרנטים</p>
+          <p>linoyha193@gmail.com</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
