--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
-<h1 align="center">Lawsuits</h1>
+<h1 align="center">התביעות הפתוחות</h1>
 <ul class="list-group list-group-flush" id="notes">
   {% for note in user.notes %}
   <li class="list-group-item">
@@ -9,9 +9,9 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </li>
- 
   {% endfor %}
 </ul>
+<h1 align="center">הוספת תביעה חדשה</h1>
 <form method="POST">
   
   <div class="form-group">
@@ -21,7 +21,7 @@
       class="form-control"
       id="SCompanyName"
       name="SCompanyName"
-      placeholder="Enter Company name"
+      placeholder="הכנס שם חברה"
     />
   </div>
   <div class="form-group">
@@ -41,7 +41,7 @@
       class="form-control"
       id="Status"
       name="Sstatus"
-      placeholder="Enter status"
+      placeholder="הכנס סטטוס"
     />
   </div>
   <label for="Sstatus">פרטי תביעה</label>
