--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,28 +1,28 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 <form method="POST">
-  <h3 align="center">Login</h3>
+  <h3 align="center">התחברות עורכי דין</h3>
   <div class="form-group">
-    <label for="email">Email Address</label>
+    <label for="email">כתובת מייל</label>
     <input
       type="email"
       class="form-control"
       id="email"
       name="email"
-      placeholder="Enter email"
+      placeholder="הכנס מייל"
     />
   </div>
   <div class="form-group">
-    <label for="password">Password</label>
+    <label for="password">סיסמא</label>
     <input
       type="password"
       class="form-control"
       id="password"
       name="password"
-      placeholder="Enter password"
+      placeholder="הכנס סיסמא"
     />
   </div>
   <br />
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn btn-primary">התחבר</button>
 </form>
 {% endblock %}
