--- a/website/templates/info.html
+++ b/website/templates/info.html
@@ -93,10 +93,9 @@
   
     <div class="column">
       <div class="card">
-        <img src="/instance/linoy.jpg" alt="lin" style="width:50%">
         <div class="container">
           <h2>לין דהן</h2>
-          <p class="title">t,rho מפתחת</p>
+          <p class="title"> מפתחת אתרים</p>
           <p>מפתחת תוכן ואתרים אינטרנטים </p>
           <p>lindahan164@gmail.com</p>
           
@@ -106,7 +105,6 @@
   
     <div class="column">
       <div class="card">
-        <img src="\img\linoy.jpg" alt="linoy" style="width:100%">
         <div class="container">
           <h2>לינוי הראש</h2>
           <p class="title">מפתחת אתרים</p>
