--- a/website/templates/notes.html
+++ b/website/templates/notes.html
@@ -83,10 +83,18 @@
     ></script>
   </body>
 </html>
-
-
+<style>
+    .note-frame {
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+  }
+  </style>
+<body>
 <h1 align ="center">צור קשר</h1>
-<table style="margin-left: 20px;" cellpadding="10" cellspacing="0">
+<table style="margin-top: 20px;" cellpadding="10" cellspacing="0" class="note-frame" >
     <thead>
         <tr>
             <th>מס תביעה</th>
@@ -116,3 +124,4 @@
         {% endfor %}
     </tbody>
 </table>
+</body>
