--- a/website/templates/Board.html
+++ b/website/templates/Board.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}{% block title %}Board{% endblock %} {% block content %}
-<h1 align ="center">התביעות שלי</h1>
 
-<table style="margin-left: 20px;" cellpadding="10" cellspacing="0">
+<style>
+    .board-frame {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+  }
+  </style>
+  <body>
+  <h1 align ="center">התביעות שלי</h1>
+<table style="margin-top: 20px;" cellpadding="10" cellspacing="0" class="board-frame">
     
     <!-- Table headers -->
         <th>
@@ -44,4 +54,5 @@
     {%endfor%}
            
 </table>
+</body>
 {% endblock %}
