--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<form method="POST">
+<style>
+  .login-frame {
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+}
+</style>
+<body>
+<form method="POST" class="login-frame">
   <h3 align="center">התחברות עורכי דין</h3>
   <div class="form-group">
     <label for="email">כתובת מייל</label>
@@ -26,3 +36,4 @@
   <button type="submit" class="btn btn-primary">התחבר</button>
 </form>
 {% endblock %}
+</body>
